--- a/Juros.ipynb
+++ b/Juros.ipynb
@@ -112,8 +112,29 @@
     "    second_part = (first_part - 1)/rate_per_year\n",
     "    number_of_compounding_periods= second_part * 12\n",
     "    result = number_of_compounding_periods\n",
-    "    return (result)\n",
-    "\n"
+    "    return (result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def discount_rate(operation,fee_charged_by_the_bank, day):\n",
+    "    result = (operation * fee_charged_by_the_bank * (day/30))\n",
+    "    return(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Profitability_Rate(amount,capital,day):\n",
+    "    first_part = \n",
+    "    "
    ]
   }
  ],
